# MAPRS

./: .dockerignore  .env.example  .gitignore  Multi-Agent_Paper_Reader_System_Design_Doc_v0.1.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  ask_paper.py  ask_retrieval.py  document_search.py  requirements.txt  reranker.py  retrieval_index.py
backend/agents/: __init__.py  base_agent.py  critic_agent.py  metadata_extractor_agent.py  planner_agent.py  reader_agent.py  verifier_agent.py  writer_agent.py
backend/api/: __init__.py  ask_store.py  comparison_store.py  main.py  schemas.py  task_state.py  task_store.py  uploads.py
backend/app/: __init__.py  cli.py
backend/comparisons/: __init__.py  exporter.py  service.py
backend/core/: __init__.py  config.py  orchestrator.py  report_quality.py  request_policy.py  state.py  telemetry.py
backend/evaluation/: README.md  THIRD_PARTY_QASPER.md  __init__.py  ask_paper.py  calibrate.py  generate_candidates.py  parallel_comparison.py  pilot.py  private_dataset.schema.json  qasper.py  qasper_benchmark.py  qasper_real.py  real_dataset.py  upstream_preflight.py  validate_dataset.py
backend/exporters/: __init.py  artifact_exporter.py  conversation_exporter.py  report_exporter.py
backend/llm/: __init__.py  client.py  json_parser.py  prompt_loader.py
docs/: document-retrieval-enhancement.md
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
(+131 files in other folders)
